--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
       merging blockchain precision with quantum-grade resilience.  
       Miyagi X Pulse unites global devices into one living network where every signal counts.
     </p>
-    <a href="whitepaper.pdf" class="button">Read Whitepaper</a>
+    <!-- Updated buttons -->
+    <a href="whitepaper.html" class="button">Read Whitepaper</a>
     <a href="https://t.me/miyagixpulse" class="button">Join Community</a>
+    <a href="https://kenjiroakihito.github.io/Miyagi-X.official/" class="button">Back to Home</a>
   </header>
 
   <section>
