--- a/whitepaper.html
+++ b/whitepaper.html
@@ -85,7 +85,7 @@
 </header>
 
 <nav class="main-nav">
-  <a href="https://kenjiroakihito.github.io/Miyagi-X.official/">← Back to Home</a>
+  <a href="index.html">← Back to Home</a>
 </nav>
 
 <nav class="toc">
