--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
       margin-bottom: 10px;
       animation: pulse 3s infinite;
     }
-    h2 { color: #66f7ff; margin-top: 0; }
+    h2 { 
+      color: #66f7ff; 
+      margin-top: 0; 
+    }
     section {
       max-width: 900px;
       margin: 60px auto;
@@ -57,7 +60,7 @@
       padding-bottom: 40px;
     }
     @keyframes pulse {
-      0%,100% { text-shadow: 0 0 20px #00eaff; }
+      0%, 100% { text-shadow: 0 0 20px #00eaff; }
       50% { text-shadow: 0 0 5px #00eaff; }
     }
     .glow-line {
@@ -80,13 +83,12 @@
     <div class="glow-line"></div>
     <p>
       A new frontier of connectivity built by <strong>Kenjiro Akihito Miyagi</strong> — 
-      merging blockchain precision with quantum-grade resilience.  
+      merging blockchain precision with quantum-grade resilience.<br>
       Miyagi X Pulse unites global devices into one living network where every signal counts.
     </p>
-    <!-- Updated buttons -->
     <a href="whitepaper.html" class="button">Read Whitepaper</a>
     <a href="https://t.me/miyagixpulse" class="button">Join Community</a>
-    </header>
+  </header>
 
   <section>
     <h2>Our Vision</h2>
