--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       Miyagi X Pulse unites global devices into one living network where every signal counts.
     </p>
     <a href="whitepaper.html" class="button">Read Whitepaper</a>
-    <a href="https://t.me/miyagixpulse" class="button">Join Community</a>
+    <a href="https://x.com/miyagixmix" class="button">Join Community</a>
   </header>
 
   <section>
