--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       Participants will help refine the Pulse protocol, shape governance models, 
       and secure early recognition within the $MIX ecosystem.
     </p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfotSTNEhPle1lA9V0iKvg2tbqHBAyW4rWzfWbEmpya7Hagxw/viewform?usp=dialog" class="button">Apply as Tester</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfotSTNEhPle1lA9V0iKvg2tbqHBAyW4rWzfWbEmpya7Hagxw/viewform?usp=sharing&ouid=104150743439874504554" class="button">Apply as Tester</a>
   </section>
 
   <section>
