--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Miyagi X Pulse | Quantum Blockchain Network</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&display=swap');
     * {
       margin: 0;
       padding: 0;
@@ -14,11 +16,10 @@
     }
 
     body {
-      font-family: 'Orbitron', sans-serif;
-      background: radial-gradient(circle at 50% 20%, #001833, #000010);
-      color: #00eaff;
+      font-family: 'Inter', sans-serif;
+      background: #0b0e12;
+      color: #e3e7eb;
       line-height: 1.6;
-      overflow-x: hidden;
     }
 
     /* NAVBAR */
@@ -26,135 +27,132 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background: rgba(0, 10, 30, 0.8);
-      padding: 15px 50px;
+      background: rgba(10, 12, 16, 0.8);
+      padding: 18px 60px;
       position: fixed;
       top: 0;
       width: 100%;
       z-index: 100;
-      box-shadow: 0 0 20px rgba(0, 234, 255, 0.3);
-      backdrop-filter: blur(8px);
+      backdrop-filter: blur(10px);
+      border-bottom: 1px solid rgba(255,255,255,0.06);
     }
 
     .logo {
-      font-size: 1.6em;
-      font-weight: 700;
-      color: #00eaff;
+      font-size: 1.4em;
+      font-weight: 600;
+      color: #42caff;
       text-decoration: none;
-      text-shadow: 0 0 10px #00eaff;
+      letter-spacing: 0.5px;
     }
 
     nav {
       display: flex;
-      gap: 35px;
+      gap: 40px;
     }
 
     nav a {
       text-decoration: none;
-      color: #bff9ff;
-      font-weight: 600;
-      transition: 0.3s;
+      color: #b8c2cc;
+      font-weight: 500;
+      font-size: 0.95em;
+      transition: 0.2s;
     }
 
     nav a:hover {
-      color: #00eaff;
-      text-shadow: 0 0 10px #00eaff;
+      color: #42caff;
     }
 
-    /* HERO / INTRO SECTION */
+    /* HERO SECTION */
     .hero {
-      text-align: center;
-      padding: 140px 20px 80px;
+      padding: 150px 20px 80px;
       max-width: 900px;
       margin: 0 auto;
+      text-align: left;
     }
 
     h1 {
-      font-size: 3em;
-      text-shadow: 0 0 20px #00eaff;
-      margin-bottom: 10px;
-      animation: pulse 3s infinite;
+      font-size: 2.8em;
+      font-weight: 700;
+      color: #ffffff;
+      margin-bottom: 12px;
     }
 
     h2 {
-      color: #66f7ff;
-      margin-top: 0;
+      font-size: 1.4em;
+      font-weight: 500;
+      color: #42caff;
+      margin-bottom: 25px;
     }
 
     p {
       font-size: 1.1em;
-      color: #bff9ff;
+      color: #cbd5df;
+      margin-bottom: 20px;
     }
 
+    /* BUTTONS */
     .button {
       display: inline-block;
-      margin: 25px 10px 0;
-      padding: 14px 28px;
-      color: #000;
-      background: #00eaff;
-      border-radius: 8px;
+      margin-top: 25px;
+      padding: 14px 30px;
+      color: white;
+      background: #42caff;
+      border-radius: 6px;
       text-decoration: none;
-      font-weight: bold;
-      transition: all 0.3s;
+      font-weight: 600;
+      font-size: 0.95em;
+      transition: 0.2s;
     }
 
     .button:hover {
-      background: #0ff;
-      box-shadow: 0 0 20px #00eaff;
-      transform: scale(1.05);
+      background: #63d7ff;
     }
 
-    /* CONTENT SECTIONS */
+    /* SECTIONS */
     section {
       max-width: 900px;
       margin: 80px auto;
       padding: 0 20px;
     }
 
-    .glow-line {
-      width: 100%;
-      height: 2px;
-      background: linear-gradient(90deg, transparent, #00eaff, transparent);
-      box-shadow: 0 0 15px #00eaff;
-      animation: move 4s linear infinite;
+    section h2 {
+      font-size: 1.8em;
+      margin-bottom: 14px;
+      color: #ffffff;
     }
 
+    .divider {
+      margin: 40px 0;
+      height: 1px;
+      background: rgba(255,255,255,0.07);
+    }
+
+    /* FOOTER */
     footer {
-      margin-top: 100px;
-      font-size: 0.8em;
-      opacity: 0.7;
-      padding-bottom: 40px;
+      margin-top: 120px;
       text-align: center;
-    }
-
-    @keyframes pulse {
-      0%, 100% { text-shadow: 0 0 20px #00eaff; }
-      50% { text-shadow: 0 0 5px #00eaff; }
-    }
-
-    @keyframes move {
-      0% { transform: translateX(-100%); }
-      100% { transform: translateX(100%); }
+      font-size: 0.85em;
+      padding-bottom: 40px;
+      color: #7a8590;
+      border-top: 1px solid rgba(255,255,255,0.05);
+      padding-top: 30px;
     }
 
     @media (max-width: 768px) {
+      header {
+        padding: 15px 20px;
+      }
       nav {
         gap: 15px;
       }
-
       h1 {
-        font-size: 2.3em;
-      }
-
-      section {
-        margin: 60px auto;
+        font-size: 2.2em;
       }
     }
   </style>
 </head>
 <body>
 
-  <!-- FIXED NAVBAR -->
   <header>
     <a href="#" class="logo">Miyagi X Pulse</a>
     <nav>
@@ -165,80 +163,83 @@
     </nav>
   </header>
 
-  <!-- HERO -->
   <div class="hero">
-    <h1>Quantum Blockchain for the Next Digital Era</h1>
-    <h2>Built for the Pulse Age</h2>
-    <div class="glow-line"></div>
+    <h1>Quantum-Grade Blockchain for the Next Digital Era</h1>
+    <h2>Engineered for the Pulse Age</h2>
     <p>
-      A new frontier of connectivity built by <strong>Kenjiro Akihito Miyagi</strong> — 
-      merging blockchain precision with quantum-grade resilience.<br>
-      Miyagi X Pulse unites global devices into one living network where every signal counts.
+      Developed by <strong>Kenjiro Akihito Miyagi</strong>, Miyagi X Pulse introduces a 
+      resilient quantum-class blockchain architecture designed for global-scale connectivity 
+      and next-generation consensus integrity.
     </p>
+    <p>
+      The network transforms everyday devices into verified pulse nodes, enabling secure, fast, 
+      and decentralized communication infrastructure built for tomorrow’s digital systems.
+    </p>
+
     <a href="whitepaper.html" class="button">Read Whitepaper</a>
     <a href="https://x.com/miyagixmix" class="button">Join Community</a>
   </div>
 
-  <!-- SECTIONS -->
   <section id="vision">
     <h2>Our Vision</h2>
     <p>
-      The Miyagi X Pulse project is built upon the idea that technology should breathe — 
-      that data should move as naturally as a heartbeat.  
-      Our vision, defined in the <em>Quantum Glow White Paper</em>, is to create a transparent, 
-      self-sustaining blockchain where fairness, speed, and human participation coexist.
+      Miyagi X Pulse envisions a world where blockchain operates with the stability of natural 
+      energy systems. Inspired by bio-synchronization and quantum signal theory, the network is 
+      engineered to create transparent, fair, and self-adjusting digital ecosystems at scale.
     </p>
     <p>
-      We are shaping a world in which quantum-secure communication becomes the standard, 
-      and where every participant — from individual user to institutional node — 
-      contributes to the pulse that drives the network forward.
+      The <em>Quantum Glow White Paper</em> outlines our commitment to long-term sustainability, 
+      minimal hardware dependency, and enterprise-level resilience.
     </p>
   </section>
+
+  <div class="divider"></div>
 
   <section id="technology">
     <h2>Prime Mobile Pulse Node Technology</h2>
     <p>
-      The Prime Mobile Pulse Node (PMPN) is our signature innovation.  
-      Each mobile device acts as a mini-node, capable of validating micro-transactions 
-      through energy-efficient Proof of Pulse & Participation (PoPP).  
-      No expensive hardware — just smart connectivity that rewards engagement and uptime.
+      The Prime Mobile Pulse Node (PMPN) framework enables any modern smartphone to participate 
+      in network validation through the Proof of Pulse & Participation (PoPP) model.
     </p>
     <p>
-      By distributing node operations across smartphones, Miyagi X Pulse achieves 
-      unprecedented scalability while maintaining quantum-resistant encryption integrity.
+      This significantly reduces operational cost while increasing scalability, enabling 
+      blockchain-grade security through distributed mobile infrastructure without relying on 
+      traditional mining hardware.
     </p>
   </section>
 
+  <div class="divider"></div>
+
   <section id="phase">
-    <h2>Current Phase — Pulse Genesis Test Network</h2>
+    <h2>Current Phase — Genesis Test Network</h2>
     <p>
-      We are now in the <strong>Genesis Testing Phase</strong> — activating 
-      Prime Mobile Pulse Nodes worldwide.  
-      This stage focuses on network calibration, energy balance optimization, 
-      and real-time stress validation.
+      The Genesis Testing Phase focuses on activation of the global Prime Mobile Pulse Node grid, 
+      network calibration, and system performance validation.
     </p>
     <p>
-      We’re recruiting early testers and node operators to join this critical mission.  
-      Participants will help refine the Pulse protocol, shape governance models, 
-      and secure early recognition within the $MIX ecosystem.
+      We are currently onboarding testers, researchers, and early operators to participate in 
+      shaping governance frameworks and refining consensus stability.
     </p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfotSTNEhPle1lA9V0iKvg2tbqHBAyW4rWzfWbEmpya7Hagxw/viewform?usp=sharing&ouid=104150743439874504554" class="button">Apply as Tester</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfotSTNEhPle1lA9V0iKvg2tbqHBAyW4rWzfWbEmpya7Hagxw/viewform?usp=sharing&ouid=104150743439874504554"
+       class="button">
+       Apply as Tester
+    </a>
   </section>
+
+  <div class="divider"></div>
 
   <section id="leadership">
     <h2>Leadership</h2>
     <p>
-      <strong>Kenjiro Akihito Miyagi</strong> — visionary technologist, designer, 
-      and founder of the Miyagi X Pulse initiative — leads the movement toward 
-      decentralized connectivity that mirrors the harmony of natural energy cycles.  
-      His philosophy drives every protocol upgrade and inspires a global community 
-      to innovate beyond limitations.
+      <strong>Kenjiro Akihito Miyagi</strong> leads the Miyagi X Pulse initiative, guiding its 
+      research, architecture, and global expansion strategy. His multidisciplinary approach 
+      combines engineering, design, and quantum signal theory to shape the future of 
+      decentralized digital infrastructure.
     </p>
   </section>
 
   <footer>
-    <div class="glow-line"></div>
-    © 2025 Miyagi X Pulse | $MIX Quantum Blockchain Network | Built for the Pulse Age
+    © 2025 Miyagi X Pulse — Quantum Blockchain Network for the Pulse Age
   </footer>
 
 </body>
