--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
     }
 
     body {
-      font-family: 'Inter', sans-serif;
-      background: #0b0e12;
-      color: #e3e7eb;
-      line-height: 1.6;
-    }
+  font-family: 'Inter', sans-serif;
+  background:
+    linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.75)),
+    url("assets/background.jpg") no-repeat center center fixed;
+  background-size: cover;
+  color: #e3e7eb;
+  line-height: 1.6;
+}
 
     /* NAVBAR */
     header {
