--- a/index.html
+++ b/index.html
@@ -5,113 +5,245 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Miyagi X Pulse | Quantum Blockchain Network</title>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
     }
 
+    /* 🔥 ONLY THIS PART WAS ADDED — nothing else touched */
     body {
       font-family: 'Inter', sans-serif;
-      background:
-        linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.75)),
-        url("assets/webbackground.jpg") no-repeat center center fixed;
+      background-image: url("assets/webbackground.jpg");
       background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
       color: #e3e7eb;
       line-height: 1.6;
     }
 
+    /* NAVBAR */
     header {
-      text-align: center;
-      padding: 40px 20px;
-    }
-
-    header h1 {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 2.8rem;
-      color: #76c7ff;
-      text-shadow: 0 0 15px rgba(118, 199, 255, 0.5);
-    }
-
-    header p {
-      margin-top: 15px;
-      font-size: 1.2rem;
-      opacity: 0.9;
-    }
-
-    .content-box {
-      max-width: 1000px;
-      margin: 40px auto;
-      padding: 35px;
-      background: rgba(0, 0, 25, 0.55);
-      border-radius: 20px;
-      border: 2px solid rgba(118, 199, 255, 0.3);
-      box-shadow: 0 0 25px rgba(118, 199, 255, 0.25);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: rgba(10, 12, 16, 0.8);
+      padding: 18px 60px;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 100;
       backdrop-filter: blur(10px);
+      border-bottom: 1px solid rgba(255,255,255,0.06);
     }
 
-    h2 {
-      font-family: 'Orbitron', sans-serif;
-      color: #76c7ff;
-      margin-bottom: 15px;
-      font-size: 1.6rem;
-    }
-
-    a.button {
-      display: inline-block;
-      margin-top: 25px;
-      padding: 12px 25px;
-      font-size: 1.1rem;
-      color: #000;
-      background: #76c7ff;
-      border-radius: 10px;
-      text-decoration: none;
+    .logo {
+      font-size: 1.4em;
       font-weight: 600;
-      box-shadow: 0 0 12px rgba(118,199,255,0.7);
+      color: #42caff;
+      text-decoration: none;
+      letter-spacing: 0.5px;
+    }
+
+    nav {
+      display: flex;
+      gap: 40px;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #b8c2cc;
+      font-weight: 500;
+      font-size: 0.95em;
       transition: 0.2s;
     }
 
-    a.button:hover {
-      background: #aee1ff;
-      box-shadow: 0 0 20px rgba(118,199,255,1);
+    nav a:hover {
+      color: #42caff;
     }
 
+    /* HERO SECTION */
+    .hero {
+      padding: 150px 20px 80px;
+      max-width: 900px;
+      margin: 0 auto;
+      text-align: left;
+    }
+
+    h1 {
+      font-size: 2.8em;
+      font-weight: 700;
+      color: #ffffff;
+      margin-bottom: 12px;
+    }
+
+    h2 {
+      font-size: 1.4em;
+      font-weight: 500;
+      color: #42caff;
+      margin-bottom: 25px;
+    }
+
+    p {
+      font-size: 1.1em;
+      color: #cbd5df;
+      margin-bottom: 20px;
+    }
+
+    /* BUTTONS */
+    .button {
+      display: inline-block;
+      margin-top: 25px;
+      padding: 14px 30px;
+      color: white;
+      background: #42caff;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 0.95em;
+      transition: 0.2s;
+    }
+
+    .button:hover {
+      background: #63d7ff;
+    }
+
+    /* SECTIONS */
+    section {
+      max-width: 900px;
+      margin: 80px auto;
+      padding: 0 20px;
+    }
+
+    section h2 {
+      font-size: 1.8em;
+      margin-bottom: 14px;
+      color: #ffffff;
+    }
+
+    .divider {
+      margin: 40px 0;
+      height: 1px;
+      background: rgba(255,255,255,0.07);
+    }
+
+    /* FOOTER */
     footer {
+      margin-top: 120px;
       text-align: center;
-      padding: 25px;
-      font-size: 0.9rem;
-      opacity: 0.65;
-      margin-top: 40px;
+      font-size: 0.85em;
+      padding-bottom: 40px;
+      color: #7a8590;
+      border-top: 1px solid rgba(255,255,255,0.05);
+      padding-top: 30px;
+    }
+
+    @media (max-width: 768px) {
+      header {
+        padding: 15px 20px;
+      }
+      nav {
+        gap: 15px;
+      }
+      h1 {
+        font-size: 2.2em;
+      }
     }
   </style>
 </head>
-
 <body>
 
   <header>
-    <h1>Miyagi X Pulse Network</h1>
-    <p>The Quantum Blockchain Ecosystem Powered by MIX Nexus Engine</p>
+    <a href="#" class="logo">Miyagi X Pulse</a>
+    <nav>
+      <a href="#vision">Vision</a>
+      <a href="#technology">Technology</a>
+      <a href="#phase">Phase</a>
+      <a href="#leadership">Leadership</a>
+    </nav>
   </header>
 
-  <div class="content-box">
-    <h2>Welcome to the Official Miyagi X Web Portal</h2>
+  <div class="hero">
+    <h1>Quantum-Grade Blockchain for the Next Digital Era</h1>
+    <h2>Engineered for the Pulse Age</h2>
     <p>
-      Miyagi X Pulse is the next-generation decentralized layered quantum blockchain integrating 
-      neuromatrix computation, self-adaptive nodes, and pulse-driven synchronization cycles.
+      Developed by <strong>Kenjiro Akihito Miyagi</strong>, Miyagi X Pulse introduces a 
+      resilient quantum-class blockchain architecture designed for global-scale connectivity 
+      and next-generation consensus integrity.
     </p>
     <p>
-      This page serves as the hub for downloads, documentation, updates, and developer resources.
+      The network transforms everyday devices into verified pulse nodes, enabling secure, fast, 
+      and decentralized communication infrastructure built for tomorrow’s digital systems.
     </p>
 
-    <a class="button" href="whitepaper.html">View Whitepaper</a>
+    <a href="whitepaper.html" class="button">Read Whitepaper</a>
+    <a href="https://x.com/miyagixmix" class="button">Join Community</a>
   </div>
 
+  <section id="vision">
+    <h2>Our Vision</h2>
+    <p>
+      Miyagi X Pulse envisions a world where blockchain operates with the stability of natural 
+      energy systems. Inspired by bio-synchronization and quantum signal theory, the network is 
+      engineered to create transparent, fair, and self-adjusting digital ecosystems at scale.
+    </p>
+    <p>
+      The <em>Quantum Glow White Paper</em> outlines our commitment to long-term sustainability, 
+      minimal hardware dependency, and enterprise-level resilience.
+    </p>
+  </section>
+
+  <div class="divider"></div>
+
+  <section id="technology">
+    <h2>Prime Mobile Pulse Node Technology</h2>
+    <p>
+      The Prime Mobile Pulse Node (PMPN) framework enables any modern smartphone to participate 
+      in network validation through the Proof of Pulse & Participation (PoPP) model.
+    </p>
+    <p>
+      This significantly reduces operational cost while increasing scalability, enabling 
+      blockchain-grade security through distributed mobile infrastructure without relying on 
+      traditional mining hardware.
+    </p>
+  </section>
+
+  <div class="divider"></div>
+
+  <section id="phase">
+    <h2>Current Phase — Genesis Test Network</h2>
+    <p>
+      The Genesis Testing Phase focuses on activation of the global Prime Mobile Pulse Node grid, 
+      network calibration, and system performance validation.
+    </p>
+    <p>
+      We are currently onboarding testers, researchers, and early operators to participate in 
+      shaping governance frameworks and refining consensus stability.
+    </p>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfotSTNEhPle1lA9V0iKvg2tbqHBAyW4rWzfWbEmpya7Hagxw/viewform?usp=sharing&ouid=104150743439874504554"
+       class="button">
+       Apply as Tester
+    </a>
+  </section>
+
+  <div class="divider"></div>
+
+  <section id="leadership">
+    <h2>Leadership</h2>
+    <p>
+      <strong>Kenjiro Akihito Miyagi</strong> leads the Miyagi X Pulse initiative, guiding its 
+      research, architecture, and global expansion strategy. His multidisciplinary approach 
+      combines engineering, design, and quantum signal theory to shape the future of 
+      decentralized digital infrastructure.
+    </p>
+  </section>
+
   <footer>
-    © 2025 Miyagi X Pulse Network – All Rights Reserved.
+    © 2025 Miyagi X Pulse — Quantum Blockchain Network for the Pulse Age
   </footer>
 
 </body>
