--- a/whitepaper.html
+++ b/whitepaper.html
@@ -162,7 +162,7 @@
 
 <section id="tokenomics">
   <h2>10. Tokenomics & Vesting</h2>
-  <p>All $MIX tokens are generated exclusively through Mobile Pulse Node activation. Node rewards feed staking & validator allocations, Founder/Developer vesting, Marketing, and Governance Treasury. Vesting schedules are tied to network participation, e.g., Founder allocation fully vests within 12 months if sufficient node activity occurs. No idle reserves or public sales exist, making the tokenomics fully effort-driven.</p>
+  <p>All $MIX tokens are generated exclusively through Mobile Pulse Node activation. Node rewards feed staking & validator allocations, Marketing, Governance Treasury, and Founder/Developer rewards. Founders and developers earn proportionally to active node rewards, vesting over a set period (e.g., 12 months) to align their incentives with network growth. No idle reserves or public sales exist, making the tokenomics fully effort-driven.</p>
 </section>
 
 <section id="security">
