--- a/whitepaper.html
+++ b/whitepaper.html
@@ -207,7 +207,7 @@
       <a href="index.html">Home</a>
       <a href="tokenomics.html">Tokenomics</a>
       <a href="#" style="color:#42caff;">Whitepaper</a>
-      <a href="#" class="nav-cta">Buy MIX</a>
+      <a href="#" class="nav-cta">Test</a>
     </nav>
   </header>
 
