--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       font-weight: 700;
     }
 
-    /* Navbar Buy Button */
+    /* Navbar Test Button */
     .nav-cta {
       background: #42caff;
       color: #000 !important;
@@ -270,7 +270,7 @@
       <a href="#miners">Miners</a>
       <a href="#testnet">Testnet Awakening <span class="badge-new">New</span></a>
       
-      <a href="#buy" class="nav-cta">Buy Now</a>
+      <a href="#Test" class="nav-cta">Test Now</a>
     </nav>
   </header>
 
