--- a/tokenomics.html
+++ b/tokenomics.html
@@ -183,7 +183,7 @@
       <a href="index.html">Home</a>
       <a href="#" style="color:#42caff;">Tokenomics</a>
       <a href="#">Whitepaper</a>
-      <a href="#" class="nav-cta">Buy MIX</a>
+      <a href="#" class="nav-cta">Test</a>
     </nav>
   </header>
 
